<?xml version="1.0"?>
<package format="2">
  <name>raptors</name>
  <version>0.0.0</version>
  <description>The raptors package</description>

  <maintainer email="bartek.durys@gmail.com">Bart63</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
